# eos-s3-rs

./: .gitignore  LICENSE-APACHE  LICENSE-MIT  README.md  format-and-build.sh  generate-pac.sh  rustfmt.sh
hal/: Cargo.toml  memory.x  openocd.cfg  rustfmt.toml
pac/: Cargo.toml  README.md  device.x
pac/src/: a1_regs.rs  adc.rs  aip.rs  aud.rs  cfg_ctl.rs  cru.rs  dma.rs  ext_regs_ffe.rs  extm4regs.rs  i2s_slave.rs  intr_ctrl.rs  iomux.rs  lib.rs  misc.rs  pkfb.rs  pmu.rs  sdma.rs  sdma_bridge.rs  sdma_sram.rs  spi.rs  spi_tlc.rs  spt.rs  timer.rs  uart.rs  wdt.rs
pac/src/a1_regs/: cfg_ctrl.rs
pac/src/adc/: adc_control.rs  adc_out.rs  adc_status.rs  control.rs  out.rs  status.rs
pac/src/aip/: apc_ctrl_0.rs  apc_ctrl_1.rs  apc_ctrl_2.rs  apc_ctrl_3.rs  apc_ctrl_4.rs  apc_ctrl_5.rs  apc_ctrl_6.rs  apc_ctrl_7.rs  apc_sta_0.rs  apc_sta_1.rs  ldo_30_ctrl_0.rs  ldo_30_ctrl_1.rs  ldo_50_ctrl_0.rs  ldo_50_ctrl_1.rs  osc_ctrl_0.rs  osc_ctrl_1.rs  osc_ctrl_2.rs  osc_ctrl_3.rs  osc_ctrl_4.rs  osc_ctrl_5.rs  osc_ctrl_6.rs  osc_ctrl_7.rs  osc_sta_0.rs  osc_sta_1.rs  ring_osc.rs  rtc_ctrl_1.rs  rtc_ctrl_2.rs  rtc_ctrl_3.rs  rtc_ctrl_4.rs  rtc_ctrl_5.rs  rtc_ctrl_6.rs  rtc_ctrl_7.rs  rtc_sta_0.rs  rtc_sta_1.rs
pac/src/aud/: dbg_mux_cfg.rs  fifo_sram_cfg.rs  i2s_config.rs  lpsd_config.rs  pdm_core_config.rs  pdma_sram_cfg.rs  voice_config.rs  voice_dma_config.rs  voice_dmac_dst_addr0.rs  voice_dmac_dst_addr1.rs  voice_dmac_fifo.rs  voice_dmac_len.rs  voice_status.rs
pac/src/cfg_ctl/: cfg_ctl.rs  cfg_data.rs  max_bl_cnt.rs  max_wl_cnt.rs  ramfifo0.rs  ramfifo1.rs  ramfifo2.rs  (+1 more)
(+584 files in other folders)
