[package]
name = "eos-s3"
version = "0.1.0"
edition = "2021"
rust-version = "1.57"
authors = ["José Morales <josfemova@gmail.com>"]
description = "Peripheral Access Crate for the QuickLogic EOS-S3 SoC"
keywords = ["no-std", "arm", "cortex-m", "embedded-hal", "fpga"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Josfemova/eos-s3-rs/"
readme = "README.md"

[dependencies]
bare-metal="0.2"
cortex-m="0.7"
vcell="0.1.2"


[dependencies.cortex-m-rt]
version = "0.7"
optional = true

[features]
rt = ["cortex-m-rt/device"]
